logs: getFirst() is back! #96